# CodeCraftEmployees

./: .gitignore  README.md  pyproject.toml  requirements.txt
CodeCraft/: __init__.py  db_conn.py  employees.py  models.py
CodeCraft/static/: package-lock.json  package.json
CodeCraft/static/assets/css/: main.css  main.css.map
CodeCraft/static/scss/: _custom.scss  main.scss
CodeCraft/templates/: _macros.html  about.html  admin.html  base.html  dashboard.html  employee.html  employees.html  error.html  index.html  loading.html  login.html  register.html
CodeCraft/templates/components/: footer.html  navbar.html
CodeCraft/templates/security/: _macro.html
CodeCraftDatabase/: __init__.py
CodeCraftDatabase/templates/: base.html
