
[project]
name = "CodeCraft"
author = [{name = "Ayda Sholani", email = "ayda.sholani@gmail.com"}]
version = "1.0.0"
description = "Register employees"
readme = "README.md"
dependencies = [
    "flask",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["CodeCraft", "tests"]